# bazel-module-child

./: BUILD  MODULE.bazel  README.md  main.cc
libhelloen/: BUILD  MODULE.bazel  helloen.cc  helloen.h  helloen_test.cc
